# nuxt-fastapi

./: .eslintignore  .eslintrc.js  .gitignore  README.md  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  server.py  tailwind.config.js  windi.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
content/: getting-started.md
layouts/: default.vue
modules/api-proxy/: index.js  plugin.js
modules/fastapi/: handler.ts  index.ts
pages/: hello.vue  index.vue
server/: __init__.py  model.py  types.ts
test/: conftest.py  empty.spec.js  empty.spec.ts  test_fastapi.py  test_flask.py
