[tool.poetry]
name = "nuxt-flask"
version = "0.1.0"
description = ""
authors = ["comfuture <comfuture@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
